syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.common";

package com.glance.spaces.common;

enum OnboardingTemplate {
  ONBOARDING_TEMPLATE_UNSPECIFIED = 0;
  BANNER = 1;
  CATEGORIZED_LV = 2;
}
